# QtApp

./: .gitignore  .gitignore.txt  CMakeLists.txt  CMakeSettings.json  README.md  jsonNumbersTestFile  textNumbersTestFile
app/: CMakeLists.txt  main.cpp
libs/: CMakeLists.txt
libs/include/: MainWindow.h
libs/src/: MainWindow.cpp
libs/ui/: mainwindow.ui
